# extras

./: .gitignore  README.md  extract_images_and_labels.py  pyproject.toml
labels/: .gitignore  classes.txt
scripts/: batch_analysis.py  batch_analysis_and_convert_dataset_to_ava.py  change_default_labels.py  changing_class_based_on_custom_model.py  check_missing_files.py  check_missing_files_and_move.py  convert_xml2yolo.py  convert_yolo_to_coco.py  convert_yolo_to_keypoints.py  create_proposals.py  dataset_cleaning.py  delete_missing_pair.py  delete_specific_labels.py  detect_person_and_use_sam2.py  extract_frames_and_text_files.py  extract_images.py  extract_images_and_labels.py  extract_keypoints_for_poselift.py  extract_video_single_person.py  extract_video_with_tracking_ids.py  extract_video_with_tracking_ids2.py  get_distinct_names.py  make_8frame_videos.py  make_videos_from_images.py  plot_bounding_box_from_images_to_labels.py  plot_bounding_box_using_text_file.py  retracking_using_images_and_labels.py  split_data.py  timesformer_convert_videos_and_save_csv.py  track_plot_over_time.py  train_ml_model.py  train_rfdetr.py  train_script.py  update_labels.py  update_yolo_format.py
