[project]
name = "extras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "ipykernel>=6.29.5",
    "labelimg>=1.8.6",
    "lapx>=0.5.11.post1",
    "scikit-learn>=1.6.1",
    "setuptools>=75.6.0",
    "split-folders>=0.5.1",
    "torch>=2.5.1",
    "ultralytics>=8.1",
]
