[project]
name = "extras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "ipykernel>=6.29.5",
    "labelimg>=1.8.6",
    "lapx>=0.5.11.post1",
    "mediapipe>=0.10.21",
    "rfdetr>=1.0.8",
    "scikit-learn>=1.6.1",
    "segment-anything>=1.0",
    "setuptools>=75.6.0",
    "split-folders>=0.5.1",
    "torch>=2.6.0",
    "ultralytics>=8.1",
]
